--- a/src/style.scss
+++ b/src/style.scss
@@ -33,13 +33,43 @@ nav {
 }
 
 main {
-  height: calc(100vh - 10px);
-  background-color: #AAAAAA;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.textField {
   outline: 0;
   padding: 5px;
   overflow: scroll;
   white-space: nowrap;
   text-overflow: ellipsis;
-  flex: 1 0 auto;
+  background-color: #AAAAAA;
+  width: 100%;
+  height: calc(100vh - 40px);
+}
+
+.tabList {
+  height: 30px;
+  width: 100%;
   display: flex;
+  background-color: #CCCCCC;
+}
+
+.tab {
+  height: 30px;
+  background-color: #999999;
+  padding-inline: 5px;
+  border-left: 1px solid grey;
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #888888;
+  }
+}
+
+.tab:first-of-type {
+  border-left: 0;
 }
