--- a/src/style.scss
+++ b/src/style.scss
@@ -53,6 +53,10 @@ nav {
     color: white;
     cursor: pointer;
     white-space: nowrap;
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
   }
 }
 
