--- a/src/style.scss
+++ b/src/style.scss
@@ -103,9 +103,21 @@ main {
   background-color: #999999;
   padding-inline: 5px;
   border-left: 1px solid grey;
-  display: grid;
-  place-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   cursor: pointer;
+  overflow: hidden;
+
+  button {
+    translate: 2px;
+    margin-left: 4px;
+    font-size: 25px;
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+  }
 
   &:hover {
     background-color: #888888;
