--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  background-color: #444;
+}
+
 #loginForm {
   position: absolute;
   top: 50%;
@@ -43,4 +47,46 @@
 #errorField {
   color: red;
   margin-top: 1rem;
+}
+
+#dashboard-heading {
+  margin: 1.5rem;
+  color: white;
+}
+
+#dashboard-projectGrid {
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 200px;
+  background-color: #777;
+  border-radius: 1rem;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+#dashboard-projectGrid div {
+  background-color: #aaa;
+  padding: 1rem;
+  border-radius: 1rem;
+  position: relative;
+}
+
+#dashboard-projectGrid div h2 {
+  margin-bottom: .5rem;
+}
+
+#dashboard-projectGrid div p {
+  margin: .5rem;
+}
+
+#dashboard-projectGrid div a {
+  color: black;
+  text-decoration: none;
+  padding: .5rem;
+  border-radius: .5rem;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
 }
