--- a/public/style.css
+++ b/public/style.css
@@ -110,11 +110,11 @@ main {
 nav {
   margin: 1rem;
   margin-right: 0;
-  padding: 1rem;
+  padding: .5rem;
   background-color: #bbb;
   border-radius: 1rem;
   width: 10rem;
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 3rem);
 }
 
 nav div {
