--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  caret-color: black;
 }
 
 body {
@@ -103,7 +104,7 @@ main {
   outline: 0;
   overflow: scroll;
   height: calc(100vh - 4rem);
-  width: calc(100vw - 17rem);
+  width: calc(100vw - 16rem);
   white-space:nowrap;
 }
 
