--- a/public/style.css
+++ b/public/style.css
@@ -96,6 +96,15 @@ main {
   right: 1rem;
 }
 
+#logout {
+  margin: 2rem;
+  background-color: #777;
+  padding: 1rem;
+  text-decoration: none;
+  color: black;
+  border-radius: 1rem;
+}
+
 #editorWindow {
   margin: 1rem;
   background-color: #bbb;
