--- a/public/style.css
+++ b/public/style.css
@@ -109,12 +109,13 @@ main {
   margin: 1rem;
   background-color: #bbb;
   padding: 1rem;
+  padding-bottom: 0;
   border-radius: 1rem;
-  outline: 0;
-  overflow: scroll;
-  height: calc(100vh - 4rem);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: calc(100vh - 3rem);
   width: calc(100vw - 16rem);
-  white-space:nowrap;
+  display: flex;
 }
 
 nav {
@@ -133,4 +134,21 @@ nav div {
   background-color: rgba(200, 200, 200, .6);
   cursor: pointer;
   border-radius: .5rem;
+}
+
+#lineNumbers {
+  display: flex;
+  flex-direction: column;
+  padding-right: .5rem;
+  text-align: end;
+}
+
+#textWindow {
+  outline: 0;
+  white-space: nowrap;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: fit-content;
+  padding-left: .5rem;
+  min-width: calc(100% - .5rem);
 }
